--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -1717,107 +1717,107 @@ stories:
   domain: http://www.paysonroundup.com/
   link: https://www.paysonroundup.com/news/health/derik-roof-speaks-with-roger-davis-about-intake-procedures-at/image_34d0821a-a1a9-11e9-be9a-9f3200e3db95.html
 images:
-- name: downtheline-downtheline-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-internet-numbers.jpg
-- name: store-on-corner-store-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-monet-one.jpg
-- name: power-lines-power-lines-empty-space-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alien-goggles.jpg
-- name: catacombs-catacombs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs.jpg
-- name: old-school-house-old-schoolhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-two.jpg
-- name: abe-lincoln-one-post-modern-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-00-00.jpg
-- name: old-school-house-old-schoolhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit.jpg
-- name: old-door-lock-old-door-lock-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crunch-paper.jpg
-- name: abe-lincoln-one-really-hot-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-07-91.jpg
-- name: server-cloud1-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-feed-people.jpg
+- name: powerlines-power-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-far-away.jpg
+- name: aws-s3-stories-fence-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-ww2-dresden.jpg
+- name: bordercrossing-bordercrossing-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-internet-numbers.jpg
+- name: lincoln-memorial-lincolnmemorial-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-electricity.jpg
+- name: carry-load-carryload-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-really-hot.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-deep-connections.jpg
+- name: scream-IMG_7916.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7916.jpg
+- name: old-door-lock-old-door-lock-2-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-neo-instinct.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+- name: ellis-island-ellis-island-room-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-far-away.jpg
+- name: border-fence-border-fence-on-hill-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dry-skin.jpg
+- name: adam-smith-adam-smith-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-oily-mcoilface.jpg
+- name: crow-crow-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
+- name: border-crossing-bordercrossing-dark-soul.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-soul.png
+- name: downtheline-downtheline-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colorful-dream.jpg
+- name: subway-subway-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smooth-ride.jpg
+- name: sand-hand-sand-hand-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-really-hot.jpg
+- name: gypsy-wagon-gypsywagon-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-hot-spicy.jpg
+- name: death-valley-death-valley-national-park-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-rainbow-festival.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor.jpg
+- name: school-clouds-church-clouds-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-nazi-poster.jpg
+- name: machine-road-machine-road-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gan-vogh.jpg
+- name: bordercrossing-bordercrossing-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
+- name: mediterranean-mediterranean-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-oily-mcoilface.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+- name: downtown-los-angeles-downtown-la-dali-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dali-two.JPG
+- name: rockingchair-face-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-alien-goggles.jpg
+- name: power-lines-power-lines-empty-space-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-far-away.jpg
+- name: gypsy-wagon-gypsywagon-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crunch-paper.jpg
 - name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
-- name: rain-princess-IMG_2971.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_2971.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
-- name: christianity-christianity-under-construction-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-alien-goggles.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gan-vogh.jpg
-- name: nyc-flag-nycflag-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-dream.jpg
-- name: rockingchair-rockingchair-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-marcel-duchamp.jpg
-- name: razorcliff-razorcliff-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dry-skin.jpg
-- name: server-cloud-server-racks-door-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-feed-people.jpg
-- name: dragon-desert-desert-dragon-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-colorful-blocks.jpg
-- name: oldhousecars-house-old-cars-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-diego-rivera1.jpg
-- name: paris-paris-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sand-paper.jpg
-- name: old-granary-field-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gan-vogh.jpg
-- name: fence-mexico-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-diego-rivera1.jpg
-- name: legal-statue-legalstatue-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-rainbow-festival.jpg
-- name: birdhouse-birdhouse-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-asteroids.jpg
-- name: server-racks-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
-- name: castle-wall-DSC-0067-kand-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kand-two.JPG
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-- name: miamibeach-miamibeach-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-gan-vogh.jpg
-- name: amusement-park-amusement-park-2-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-emily-carr.jpg
-- name: school-clouds-church-clouds-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-constitution.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
-- name: locked-up-steam-lock-up-steam-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-yellow-paper.jpg
-- name: yuma-bank-yuma-bak-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crafty-painting.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
-- name: white-house-whitehouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-electricity.jpg
-- name: ellis-island-ellis-island-room-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-pablo-blue.jpg
-- name: dc-statue-dcstatue-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-internet-numbers.jpg
-- name: desert-dragon-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-diego-rivera1.jpg
-- name: hollywood-building-hollywood-building-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-copper-circuit-2.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-alien-goggles.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alien-goggles.png
-- name: oldhouse-oldhouse-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alien-goggles.jpg
-- name: supreme-court-supremecourt-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-post-modern.jpg
-- name: downtown-los-angeles-downtown-la-horiz-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-horiz-circuit.JPG
-- name: catacombs-catacombs-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-mucha-mult.jpg
-- name: sand-hand-sand-hand-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-graham-sutherland.jpg
-- name: white-house-lawn-white-house-window-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-gan-vogh.jpg
-- name: status-berlin-status-berlin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-dali.jpg
-- name: bluelake-creativity-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
+- name: store-on-corner-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
+- name: berlinwall-DSC-0084-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-internet-numbers.jpg
+- name: legal-statue-legalstatue-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-really-hot.jpg
+- name: file-00-00-40-84.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-40-84.jpg
+- name: old-granary-field-granaryfield-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-monet-one.jpg
+- name: trucksilo-trucksilo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-emily-carr.jpg
+- name: store-on-corner-store-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-kand-two.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
+- name: abandonedbuildings_colored_circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colored_circuits.jpg
+- name: downtown-trucksilo-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-diego-rivera1.jpg
+- name: adam-smith-adam-smith-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
+- name: oldcabin-oldcabin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
+- name: castle-wall-DSC-0067-attack-planes.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-attack-planes.JPG
+- name: berlinwall2-berlinwall-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-really-hot.jpg
+- name: gypsy-wagon-gypsywagon-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
+- name: death-valley-death-valley-national-park-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-spagetti-accident.jpg
+- name: berlinwall2-berlinwall-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-dali.jpg
+- name: udnie-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7319.jpg
+- name: trucksilo-trucksilo-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-space-pizza.jpg
 ---
 Man Killed In Crash On Sheridan Road Near Loyola University Campus.&nbsp;Public Meetings In The Logansport Area.&nbsp;Two Charged With Passing Fake Bills.&nbsp;Lam Says Hong Kong Bill Is 'dead' But Unclear If Demand Met.&nbsp;Asian Shares Mostly Retreat Ahead Of Fed Statement.&nbsp;Utah Tax Restructuring Task Force Hears From Public In Layton, Many Worry About New Taxes.&nbsp;Pastor Gregory Ryan Wolfe.&nbsp;Hamilton Colonial Embraces Its Spectacular Surroundings.&nbsp;
